# mecslib

./: .gitignore  Cargo.toml
src/: components.rs  data.rs  lib.rs
src/data/: loading.rs  world.rs
src/system/: stateful.rs  stateless.rs
