[package]
name = "mquad-ecs-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
hecs = { version = "0.10.3", features = ["macros"] }
fastrand = { version = "2.0.0", default-features = false }

[profile.dev.package.'*']
opt-level = 3

[profile.dev]
strip = "symbols"

[profile.release]
lto = true
opt-level = 3
strip = "symbols"
codegen-units = 1

[[bin]]
name = "game"
path = "bin/game.rs"
